k8s/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-reader-test
  namespace: dev
spec:
  serviceAccountName: pod-reader-sa
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sh", "-c", "kubectl get pods -n dev && sleep 3600"]
