k8s/product-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
        - name: product-app
          image: product-app:latest
          ports:
            - containerPort: 8094
---
apiVersion: v1
kind: Service
metadata:
  name: product-app-service
spec:
  selector:
    app: product-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8094
      nodePort: 30036
